--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
@@ -19,107 +19,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FF.\n",
+      "======================================================================\n",
+      "FAIL: test_calculate_accuracy (__main__.TestDataQualityMetrics)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_1499/1223726924.py\", line 74, in test_calculate_accuracy\n",
+      "    self.assertEqual(result, 1/3)  # Only 1 out of 3 is correct for 'age'\n",
+      "AssertionError: 0.5 != 0.3333333333333333\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_calculate_completeness (__main__.TestDataQualityMetrics)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_1499/1223726924.py\", line 82, in test_calculate_completeness\n",
+      "    self.assertEqual(result, 0.75)  # 75% of the values are non-null\n",
+      "AssertionError: 0.8333333333333333 != 0.75\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 3 tests in 0.004s\n",
+      "\n",
+      "FAILED (failures=2)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running data quality check...\n",
-      "Missing Data Rate:\n",
-      "transaction_id    20.0\n",
-      "amount            20.0\n",
-      "date              20.0\n",
-      "dtype: float64\n",
-      "Mismatch Rate: 40.0%\n",
-      "Running data quality check...\n",
-      "Missing Data Rate:\n",
-      "transaction_id    20.0\n",
-      "amount            20.0\n",
-      "date              20.0\n",
-      "dtype: float64\n",
-      "Mismatch Rate: 40.0%\n",
-      "Running data quality check...\n",
-      "Missing Data Rate:\n",
-      "transaction_id    20.0\n",
-      "amount            20.0\n",
-      "date              20.0\n",
-      "dtype: float64\n",
-      "Mismatch Rate: 40.0%\n",
-      "Running data quality check...\n",
-      "Missing Data Rate:\n",
-      "transaction_id    20.0\n",
-      "amount            20.0\n",
-      "date              20.0\n",
-      "dtype: float64\n",
-      "Mismatch Rate: 40.0%\n",
-      "Running data quality check...\n",
-      "Missing Data Rate:\n",
-      "transaction_id    20.0\n",
-      "amount            20.0\n",
-      "date              20.0\n",
-      "dtype: float64\n",
-      "Mismatch Rate: 40.0%\n"
+      "Logged data quality metrics: Accuracy = 0.2857142857142857, Completeness = 0.8333333333333334\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import schedule\n",
-    "import time\n",
-    "import logging\n",
+    "from datetime import datetime\n",
+    "import unittest\n",
     "\n",
-    "# Step 1: Set up the logging configuration\n",
-    "logging.basicConfig(filename='data_quality_log.txt', level=logging.INFO,\n",
-    "                    format='%(asctime)s - %(message)s')\n",
-    "\n",
-    "# Sample dataset for demonstration\n",
-    "data = {\n",
-    "    'transaction_id': [1, 2, 3, None, 5],\n",
-    "    'amount': [100.0, 200.5, None, 400.0, 500.5],\n",
-    "    'date': ['2023-01-01', '2023-01-02', None, '2023-01-04', '2023-01-05']\n",
-    "}\n",
-    "\n",
-    "# Creating a DataFrame for the example dataset\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Step 2: Function to calculate quality metrics\n",
-    "def calculate_quality_metrics(df):\n",
-    "    # Calculate missing data rate for each column\n",
-    "    missing_data_rate = df.isnull().mean() * 100\n",
-    "\n",
-    "    # Calculate mismatch rate (assuming we compare 'amount' with a trusted source, here we use a dummy check)\n",
-    "    expected_amount = [100.0, 200.5, 300.0, 400.0, 500.0]  # Example of expected values\n",
-    "    mismatch_rate = ((df['amount'] != pd.Series(expected_amount)).sum()) / len(df) * 100\n",
-    "\n",
-    "    # Log the calculated metrics\n",
-    "    logging.info(f\"Missing Data Rate:\\n{missing_data_rate}\")\n",
-    "    logging.info(f\"Mismatch Rate: {mismatch_rate}%\")\n",
+    "# Function to calculate accuracy\n",
+    "def calculate_accuracy(df, correct_values_dict):\n",
+    "    \"\"\"\n",
+    "    Calculate the accuracy of specific fields in a DataFrame based on correct values.\n",
+    "    \"\"\"\n",
+    "    if df is None or df.empty:\n",
+    "        raise ValueError(\"The DataFrame is empty or None.\")\n",
     "    \n",
-    "    print(f\"Missing Data Rate:\\n{missing_data_rate}\")\n",
-    "    print(f\"Mismatch Rate: {mismatch_rate}%\")\n",
+    "    correct_count = 0\n",
+    "    total_count = 0\n",
+    "    for column, correct_value in correct_values_dict.items():\n",
+    "        if column in df.columns:\n",
+    "            correct_count += (df[column] == correct_value).sum()\n",
+    "            total_count += df[column].notnull().sum()\n",
+    "    \n",
+    "    if total_count == 0:\n",
+    "        raise ValueError(\"No valid (non-null) records found to calculate accuracy.\")\n",
+    "    \n",
+    "    accuracy = correct_count / total_count\n",
+    "    return accuracy\n",
     "\n",
-    "# Step 3: Function to run the scheduled task\n",
-    "def run_monitoring_task():\n",
-    "    print(\"Running data quality check...\")\n",
-    "    calculate_quality_metrics(df)\n",
+    "# Function to calculate completeness\n",
+    "def calculate_completeness(df):\n",
+    "    \"\"\"\n",
+    "    Calculate the completeness of the DataFrame (percentage of non-null values).\n",
+    "    \"\"\"\n",
+    "    if df is None or df.empty:\n",
+    "        raise ValueError(\"The DataFrame is empty or None.\")\n",
+    "    \n",
+    "    completeness = df.notnull().mean().mean()  # Proportion of non-null entries across the entire DataFrame\n",
+    "    return completeness\n",
     "\n",
-    "# Step 4: Schedule the task to run every 5 minutes\n",
-    "schedule.every(5).minutes.do(run_monitoring_task)\n",
+    "# Function to log metrics over time (batching log entries)\n",
+    "def batch_log_metrics(log_file, metrics_batch):\n",
+    "    \"\"\"\n",
+    "    Batch log metrics to a CSV file after reaching a certain batch size.\n",
+    "    \"\"\"\n",
+    "    if len(metrics_batch) >= 10:  # Example: Batch size of 10\n",
+    "        metrics_df = pd.DataFrame(metrics_batch)\n",
+    "        metrics_df.to_csv(log_file, mode='a', header=False, index=False)\n",
+    "        metrics_batch.clear()  # Clear the batch after writing\n",
     "\n",
-    "# Step 5: Keep the script running to monitor data quality periodically\n",
-    "try:\n",
-    "    while True:\n",
-    "        schedule.run_pending()\n",
-    "        time.sleep(1)  # Wait for 1 second before checking again\n",
-    "except KeyboardInterrupt:\n",
-    "    print(\"Monitoring script has been stopped by the user.\")\n"
+    "# Function to run the data quality monitoring task\n",
+    "def run_monitoring_task(df, correct_values, log_file, metrics_batch):\n",
+    "    \"\"\"\n",
+    "    Run the monitoring task, calculating metrics and logging them.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        accuracy = calculate_accuracy(df, correct_values)\n",
+    "        completeness = calculate_completeness(df)\n",
+    "        timestamp = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "        \n",
+    "        metrics_batch.append({'timestamp': timestamp, 'accuracy': accuracy, 'completeness': completeness})\n",
+    "        batch_log_metrics(log_file, metrics_batch)\n",
+    "        \n",
+    "        print(f\"Logged data quality metrics: Accuracy = {accuracy}, Completeness = {completeness}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in monitoring task: {e}\")\n",
+    "\n",
+    "# Unit tests for the functions\n",
+    "class TestDataQualityMetrics(unittest.TestCase):\n",
+    "    \n",
+    "    def test_calculate_accuracy(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'age': [25, 30, 35],\n",
+    "            'city': ['New York', 'New York', 'Chicago']\n",
+    "        })\n",
+    "        correct_values = {'age': 30, 'city': 'New York'}\n",
+    "        result = calculate_accuracy(df, correct_values)\n",
+    "        self.assertEqual(result, 1/3)  # Only 1 out of 3 is correct for 'age'\n",
+    "\n",
+    "    def test_calculate_completeness(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'age': [25, None, 35],\n",
+    "            'city': ['New York', 'Los Angeles', 'Chicago']\n",
+    "        })\n",
+    "        result = calculate_completeness(df)\n",
+    "        self.assertEqual(result, 0.75)  # 75% of the values are non-null\n",
+    "\n",
+    "    def test_empty_dataframe(self):\n",
+    "        df = pd.DataFrame()\n",
+    "        correct_values = {'age': 30, 'city': 'New York'}\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            calculate_accuracy(df, correct_values)\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            calculate_completeness(df)\n",
+    "\n",
+    "# Example usage:\n",
+    "if __name__ == '__main__':\n",
+    "    # Sample DataFrame (you can replace this with actual data)\n",
+    "    data = {\n",
+    "        'name': ['Alice', 'Bob', 'Charlie', None],\n",
+    "        'age': [25, 30, 35, 40],\n",
+    "        'city': ['New York', 'Los Angeles', None, 'Chicago']\n",
+    "    }\n",
+    "\n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    # Correct values for accuracy check (you can define the correct values as per your requirement)\n",
+    "    correct_values = {\n",
+    "        'age': 30,  # Example: correct age is 30\n",
+    "        'city': 'New York'  # Example: correct city is 'New York'\n",
+    "    }\n",
+    "\n",
+    "    # Log file location\n",
+    "    log_file = 'data_quality_metrics.csv'\n",
+    "\n",
+    "    # Initialize an empty list for batch logging\n",
+    "    metrics_batch = []\n",
+    "\n",
+    "    # Run monitoring task\n",
+    "    run_monitoring_task(df, correct_values, log_file, metrics_batch)\n",
+    "\n",
+    "    # Run unit tests\n",
+    "    unittest.main(argv=[''], exit=False)  # To run the unit tests in the notebook or script\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
