--- a/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_1.ipynb
+++ b/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -532,6 +532,80 @@
     "regex_pattern = r'^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).{8,}$'\n",
     "invalid_passwords = validate_advanced_regex(df, 'password', regex_pattern)\n",
     "print(\"Invalid Passwords:\", invalid_passwords)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Task 1: Null Values Check\n",
+    "def check_null_values(df):\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    return df.isnull().values.any()\n",
+    "\n",
+    "# Task 2: Data Type Validation\n",
+    "def check_data_types(df, column, expected_type):\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    return df[column].map(type) == expected_type\n",
+    "\n",
+    "# Task 3: Unique Identifiers Check\n",
+    "def check_unique_identifier(df, column):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    return df[column].is_unique\n",
+    "\n",
+    "# Task 4: Email Format Validation\n",
+    "def validate_emails(df, column):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    email_pattern = r\"^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$\"\n",
+    "    return df[column].astype(str).str.match(email_pattern)\n",
+    "\n",
+    "# Task 5: Logical Age Validity\n",
+    "def check_logical_age(df, column):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    return df[(df[column] < 0) | (df[column] > 120)]\n",
+    "\n",
+    "# Task 6: Impute Missing Values with Mean\n",
+    "def impute_missing_with_mean(df, column):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    if df[column].isnull().all():\n",
+    "        raise ValueError(f\"All values in column '{column}' are NaN.\")\n",
+    "    df[column].fillna(df[column].mean(), inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# Task 7: Detect Duplicates\n",
+    "def detect_duplicates(df):\n",
+    "    return df[df.duplicated(keep=False)]\n",
+    "\n",
+    "# Task 8: Numerical Value Range Check\n",
+    "def validate_numerical_range(df, column, min_value, max_value):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    return df[(df[column] < min_value) | (df[column] > max_value)]\n",
+    "\n",
+    "# Task 9: Custom Completeness Report\n",
+    "def completeness_violation_report(df, mandatory_fields):\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    return df[df[mandatory_fields].isnull().any(axis=1)]\n",
+    "\n",
+    "# Task 10: Advanced Regex Check\n",
+    "def validate_advanced_regex(df, column, pattern):\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    return df[~df[column].astype(str).str.match(pattern, na=False)]\n"
    ]
   }
  ],
