--- a/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
@@ -10,23 +10,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "     Age   Salary Department\n",
+      "0  25.0  50000.0         HR\n",
+      "1  27.0  54000.0    Finance\n",
+      "2   NaN  58000.0         HR\n",
+      "3  29.0      NaN        NaN\n",
+      "4  30.0  62000.0         IT\n",
+      "\n",
+      "DataFrame after Imputation:\n",
+      "      Age   Salary Department\n",
+      "0  25.00  50000.0         HR\n",
+      "1  27.00  54000.0    Finance\n",
+      "2  27.75  58000.0         HR\n",
+      "3  29.00  56000.0         HR\n",
+      "4  30.00  62000.0         IT\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Sample data with missing values\n",
+    "data = {\n",
+    "    'Age': [25, 27, np.nan, 29, 30],\n",
+    "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
+    "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"Original DataFrame:\\n\", df)\n",
+    "\n",
+    "# --- Mean Imputation ---\n",
+    "mean_imputer = SimpleImputer(strategy='mean')\n",
+    "df['Age'] = mean_imputer.fit_transform(df[['Age']])\n",
+    "df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
+    "\n",
+    "# --- Median Imputation (optional, overrides Age mean imputation) ---\n",
+    "median_imputer = SimpleImputer(strategy='median')\n",
+    "df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
+    "\n",
+    "# --- Mode Imputation ---\n",
+    "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
+    "\n",
+    "print(\"\\nDataFrame after Imputation:\\n\", df)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
