--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_4.ipynb
@@ -10,23 +10,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error loading data: [Errno 2] No such file or directory: 'path_to_your_credit_card_fraud_detection_data.csv'\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code from here"
+    "# write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.utils import resample\n",
+    "\n",
+    "# --- Step 1: Load the Dataset ---\n",
+    "def load_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Load the Credit Card Fraud Detection dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        file_path (str): Path to the CSV file.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: The loaded dataset.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Load the dataset\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(f\"Data loaded successfully with {df.shape[0]} rows and {df.shape[1]} columns.\")\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading data: {e}\")\n",
+    "        return pd.DataFrame()  # Return an empty DataFrame in case of error\n",
+    "\n",
+    "# --- Step 2: Visualize Class Imbalance ---\n",
+    "def visualize_class_imbalance(df):\n",
+    "    \"\"\"\n",
+    "    Visualize the class imbalance in the dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The dataset containing the class labels.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Plot the class distribution\n",
+    "        plt.figure(figsize=(6, 4))\n",
+    "        sns.countplot(x='Class', data=df, palette='coolwarm')\n",
+    "        plt.title(\"Class Distribution: Fraud vs Non-Fraud\")\n",
+    "        plt.xlabel(\"Class\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during visualization: {e}\")\n",
+    "\n",
+    "# --- Step 3: Apply Random Undersampling ---\n",
+    "def random_undersample(df):\n",
+    "    \"\"\"\n",
+    "    Apply random undersampling to balance the dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The original imbalanced dataset.\n",
+    "        \n",
+    "    Returns:\n",
+    "        pd.DataFrame: The undersampled balanced dataset.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Separate majority and minority classes\n",
+    "        majority = df[df['Class'] == 0]\n",
+    "        minority = df[df['Class'] == 1]\n",
+    "\n",
+    "        # Undersample the majority class\n",
+    "        majority_undersampled = resample(majority, \n",
+    "                                         replace=False,     # Sample without replacement\n",
+    "                                         n_samples=len(minority),  # Match the minority class size\n",
+    "                                         random_state=42)   # For reproducibility\n",
+    "\n",
+    "        # Combine the undersampled majority class with the minority class\n",
+    "        balanced_df = pd.concat([majority_undersampled, minority])\n",
+    "\n",
+    "        print(f\"Balanced dataset created with {balanced_df.shape[0]} rows.\")\n",
+    "        return balanced_df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during undersampling: {e}\")\n",
+    "        return pd.DataFrame()  # Return an empty DataFrame in case of error\n",
+    "\n",
+    "# --- Step 4: Plot Balanced Dataset ---\n",
+    "def visualize_balanced_class_imbalance(df):\n",
+    "    \"\"\"\n",
+    "    Visualize the class distribution after random undersampling.\n",
+    "    \n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The balanced dataset.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Plot the class distribution after undersampling\n",
+    "        plt.figure(figsize=(6, 4))\n",
+    "        sns.countplot(x='Class', data=df, palette='coolwarm')\n",
+    "        plt.title(\"Balanced Class Distribution: Fraud vs Non-Fraud\")\n",
+    "        plt.xlabel(\"Class\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during visualization: {e}\")\n",
+    "\n",
+    "# --- Step 5: Execution ---\n",
+    "def main(file_path):\n",
+    "    # Load the data\n",
+    "    df = load_data(file_path)\n",
+    "    \n",
+    "    if not df.empty:\n",
+    "        # Step 2: Visualize class imbalance\n",
+    "        visualize_class_imbalance(df)\n",
+    "        \n",
+    "        # Step 3: Apply random undersampling\n",
+    "        balanced_df = random_undersample(df)\n",
+    "        \n",
+    "        if not balanced_df.empty:\n",
+    "            # Step 4: Visualize the balanced dataset\n",
+    "            visualize_balanced_class_imbalance(balanced_df)\n",
+    "\n",
+    "# --- Run the Process ---\n",
+    "# Provide the path to your CSV file here\n",
+    "file_path = 'path_to_your_credit_card_fraud_detection_data.csv'\n",
+    "main(file_path)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
